webapl-0/ingress.yaml
## Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapl0
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  ingressClassName: nginx
  rules:
  - host: ingress.k8s1.labo.local
    http:
      paths:
      - path: /webapl0(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: webapl0
            port:
              number: 3000
